export interface DataProps {
    image: string;
    title: string;
    desc: string;
}

export const data: DataProps[] = [
    {
        image: 'https://joondong2.github.io/rn_playground/images/1.jpeg',
        title: '제목1',
        desc: '설명1',
    },
    {
        image: 'https://joondong2.github.io/rn_playground/images/2.jpeg',
        title: '제목2',
        desc: '설명2',
    },
    {
        image: 'https://joondong2.github.io/rn_playground/images/3.jpeg',
        title: '제목3',
        desc: '설명3',
    },
    {
        image: 'https://joondong2.github.io/rn_playground/images/4.jpeg',
        title: '제목4',
        desc: '설명4',
    },
    {
        image: 'https://joondong2.github.io/rn_playground/images/5.jpeg',
        title: '제목5',
        desc: '설명6',
    },
    {
        image: 'https://joondong2.github.io/rn_playground/images/6.jpeg',
        title: '제목6',
        desc: '설명6',
    },
    // {
    //     image: 'https://joondong2.github.io/rn_playground/images/7.jpeg',
    //     title: '제목7',
    //     desc: '설명7',
    // },
];
