...

    return (
        <TouchableWithoutFeedback onPress={navigation.goBack}>
            <View style={{ flex: 1 }}>
                <SharedElement id={`${index}-${order}.image`}>
                    <FastImage
                        testID="DetailImage"
                        style={{ width: screen.width, height: window.height }}
                        source={{ uri: image }}
                        resizeMode="cover"
                    />
                </SharedElement>
                <SharedElement
...
