...
    {
        name: 'Zoom',
        label: 'Zoom 클론',
    },
    {
        name: 'KakaoWebtoon',
        label: '카카오웹툰 클론',
    },
];

export default () => {
    const [roomInfo, setRoomInfo] = useState<
        | {
...
