...
                    />
                ) : (
                    <Animated.Text
                        style={{
                            color: '#ffffff',
                        }}>
                        상대방을 기다리고 있습니다.
                    </Animated.Text>
                )}
            </Animated.View>
            <Animated.View
                style={[
                    {
...
